@@ -2,6 +2,8 @@ Revision history for Dist-Mgr
 
 1.01 UNREL
     - Added bin/distmgr script
+    - ci_badges() was forcing $fs_entry param, but it should be optional; fixed
+    - git_commit() now accepts $msg instead of $version as first param
 
 1.00    2020-12-30
     - Fix issue where ABSTRACT was being pulled from one of the test
